--- a/app/src/main/res/layout/dialog_add_review.xml
+++ b/app/src/main/res/layout/dialog_add_review.xml
@@ -1,30 +1,39 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:padding="16dp">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Write your review:"
-        android:textSize="18sp"
-        android:textStyle="bold"/>
-
-    <EditText
+    <!-- EditText for Review -->
+    <androidx.appcompat.widget.AppCompatEditText
         android:id="@+id/editTextReview"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_width="0dp"
+        android:layout_height="150dp"
         android:hint="Enter your review here"
-        android:minLines="3"
-        android:gravity="top"/>
+        android:textSize="14sp"
+        android:padding="12dp"
+        android:background="@drawable/edit_text_background"
+        android:gravity="top|start"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/buttonSubmitReview"
+        android:scrollbars="vertical"
+        android:imeOptions="actionDone" />
 
-    <Button
+    <!-- Submit Button -->
+    <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/buttonSubmitReview"
-        android:layout_width="wrap_content"
+        android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:text="Submit Review"
-        android:layout_gravity="end"
-        android:layout_marginTop="8dp"/>
-</LinearLayout>
+        android:textColor="@android:color/black"
+        android:background="@drawable/border"
+        app:layout_constraintTop_toBottomOf="@id/editTextReview"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="16dp"
+        android:padding="12dp"/>
+
+</androidx.constraintlayout.widget.ConstraintLayout>
