--- a/app/src/main/res/layout/fragment_me_buyer.xml
+++ b/app/src/main/res/layout/fragment_me_buyer.xml
@@ -5,114 +5,129 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MeFragmentSeller">
+    tools:context=".MeFragmentBuyer">
 
+    <!-- ScrollView to make content scrollable -->
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent">
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:padding="16dp">
 
-            <!-- Profile Image and Upload Button Section -->
+            <!-- Profile Image Section -->
             <androidx.cardview.widget.CardView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="30dp"
-                android:elevation="4dp"
-                app:cardCornerRadius="50dp"
+                android:layout_width="120dp"
+                android:layout_height="120dp"
                 android:layout_gravity="center"
-              >
+                android:elevation="6dp"
+                app:cardCornerRadius="60dp"
+                android:layout_marginTop="30dp">
 
                 <ImageView
                     android:id="@+id/profileImageView"
-                    android:layout_width="100dp"
-                    android:layout_height="100dp"
-                    android:layout_centerHorizontal="true"
-                    app:srcCompat="@drawable/me"
-                    android:layout_gravity="center"
-                    tools:ignore="MissingConstraints"/>
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:src="@drawable/gear"
+                    android:scaleType="centerCrop"/>
             </androidx.cardview.widget.CardView>
 
-            <Button
+            <!-- Upload Button -->
+            <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/uploadButton"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:background="@drawable/border"
                 android:text="Upload"
                 android:layout_gravity="center"
-                android:layout_marginTop="16dp"/>
+                android:layout_marginTop="8dp"/>
 
-            <!-- User Info Text Section -->
+            <!-- User Name -->
             <TextView
                 android:id="@+id/textView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="User"
+                android:text="User Name"
                 android:textSize="22sp"
                 android:textStyle="bold"
-                android:layout_gravity="center"
-                android:layout_marginTop="10dp"/>
+                android:layout_marginTop="16dp"
+                android:layout_gravity="center"/>
 
+            <!-- User Email -->
             <TextView
-                android:id="@+id/textView2"
+                android:id="@+id/emailTextView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Email"
+                android:text="useremail@example.com"
                 android:textSize="16sp"
-                android:layout_gravity="center"
-                android:layout_marginTop="10dp"/>
+                android:layout_marginTop="8dp"
+                android:layout_gravity="center"/>
 
-            <!-- Settings and Action Buttons -->
-            <LinearLayout
-                android:layout_width="match_parent"
+            <!-- Shipping Address -->
+            <TextView
+                android:id="@+id/addressTextView"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:orientation="vertical"
+                android:text="123 Main Street, City, Country"
+                android:textSize="16sp"
+                android:layout_marginTop="8dp"
+                android:layout_gravity="center"/>
+
+            <!-- Purchase History Button -->
+            <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/orderHistoryButton"
+                android:layout_width="match_parent"
+                android:layout_height="55dp"
+                android:text="View Order History"
                 android:layout_marginTop="20dp"
-                android:layout_gravity="center">
+                android:layout_marginBottom="8dp"
+                android:background="@drawable/profile_btn"
+                android:gravity="center_vertical|start"
+                android:drawableStart="@drawable/history"
+                android:drawablePadding="16dp"
+                android:paddingStart="16dp"/>
 
-                <androidx.appcompat.widget.AppCompatButton
-                    android:id="@+id/settingbutton"
-                    android:layout_width="match_parent"
-                    android:layout_height="55dp"
-                    android:text="Settings"
-                    android:textAlignment="viewStart"
-                    android:layout_marginStart="32dp"
-                    android:layout_marginEnd="32dp"
-                    android:layout_marginTop="10dp"
-                    android:background="@drawable/profile_btn"
-                    android:drawablePadding="20dp"
-                    android:paddingStart="20dp"
-                    android:drawableStart="@drawable/settings"/>
+            <!-- Settings Button -->
+            <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/settingbutton"
+                android:layout_width="match_parent"
+                android:layout_height="55dp"
+                android:text="Account Settings"
+                android:layout_marginBottom="8dp"
+                android:background="@drawable/profile_btn"
+                android:gravity="center_vertical|start"
+                android:drawableStart="@drawable/settings"
+                android:drawablePadding="16dp"
+                android:paddingStart="16dp"/>
 
-                <androidx.appcompat.widget.AppCompatButton
-                    android:id="@+id/editbutton"
-                    android:layout_width="match_parent"
-                    android:layout_height="55dp"
-                    android:text="Edit Profile"
-                    android:textAlignment="viewStart"
-                    android:layout_marginStart="32dp"
-                    android:layout_marginEnd="32dp"
-                    android:layout_marginTop="10dp"
-                    android:background="@drawable/profile_btn"
-                    android:drawablePadding="20dp"
-                    android:paddingStart="20dp"
-                    android:drawableStart="@drawable/edit"/>
+            <!-- Edit Profile Button -->
+            <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/editbutton"
+                android:layout_width="match_parent"
+                android:layout_height="55dp"
+                android:text="Edit Profile"
+                android:layout_marginBottom="8dp"
+                android:background="@drawable/profile_btn"
+                android:gravity="center_vertical|start"
+                android:drawableStart="@drawable/edit"
+                android:drawablePadding="16dp"
+                android:paddingStart="16dp"/>
 
-                <androidx.appcompat.widget.AppCompatButton
-                    android:id="@+id/logoutbutton"
-                    android:layout_width="match_parent"
-                    android:layout_height="55dp"
-                    android:text="Logout"
-                    android:textAlignment="viewStart"
-                    android:layout_marginStart="32dp"
-                    android:layout_marginEnd="32dp"
-                    android:layout_marginTop="10dp"
-                    android:background="@drawable/profile_btn"
-                    android:drawablePadding="20dp"
-                    android:paddingStart="20dp"
-                    android:drawableStart="@drawable/logout"/>
-            </LinearLayout>
+            <!-- Logout Button -->
+            <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/logoutbutton"
+                android:layout_width="match_parent"
+                android:layout_height="55dp"
+                android:text="Logout"
+                android:layout_marginBottom="8dp"
+                android:background="@drawable/profile_btn"
+                android:gravity="center_vertical|start"
+                android:drawableStart="@drawable/logout"
+                android:drawablePadding="16dp"
+                android:paddingStart="16dp"/>
 
         </LinearLayout>
     </ScrollView>
