--- a/app/src/main/res/layout/item_review.xml
+++ b/app/src/main/res/layout/item_review.xml
@@ -3,8 +3,8 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_margin="8dp"
-    android:elevation="4dp">
+    android:layout_marginBottom="10dp"
+    >
 
     <LinearLayout
         android:orientation="horizontal"
@@ -18,7 +18,6 @@
             android:layout_marginTop="8dp"
             android:layout_gravity="start"
             android:layout_marginEnd="16dp"
-            android:elevation="4dp"
             app:cardCornerRadius="100dp">
 
             <!-- Profile Image -->
@@ -58,6 +57,7 @@
                 android:textSize="12sp"
                 android:textColor="@android:color/darker_gray"/>
         </LinearLayout>
+
 
     </LinearLayout>
 </androidx.cardview.widget.CardView>
