--- a/app/src/main/res/layout/activity_seller_shop.xml
+++ b/app/src/main/res/layout/activity_seller_shop.xml
@@ -41,7 +41,7 @@
             android:id="@+id/cv"
             android:layout_width="120dp"
             android:layout_height="120dp"
-            app:cardCornerRadius="100dp"
+            app:cardCornerRadius="40dp"
             android:layout_marginEnd="8dp"
             tools:ignore="MissingConstraints">
 
@@ -58,9 +58,9 @@
         <!-- Message Icon positioned at bottom-right of the profile image -->
         <ImageView
             android:id="@+id/iv_message_icon"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:src="@drawable/messenger"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:src="@drawable/chat2"
             android:contentDescription="Message Icon"
             android:elevation="4dp"
             app:layout_constraintEnd_toEndOf="@id/cv"
@@ -87,6 +87,7 @@
                 android:text="Shop:"
                 android:textSize="16sp"
                 android:textStyle="bold"
+                android:textColor="@color/black"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
@@ -94,7 +95,8 @@
                 android:id="@+id/tv_shop_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Shop Name"
+                android:text=" Shop Name"
+                android:textColor="@color/black"
                 android:textSize="18sp"
                 app:layout_constraintStart_toEndOf="@id/tv_shop_label"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -105,6 +107,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Address:"
+                android:textColor="@color/black"
                 android:layout_marginTop="2dp"
                 android:textSize="16sp"
                 android:textStyle="bold"
@@ -117,6 +120,7 @@
                 android:layout_height="wrap_content"
                 android:text="Tech City"
                 android:textSize="18sp"
+                android:textColor="@color/black"
                 app:layout_constraintStart_toEndOf="@id/tv_address_label"
                 app:layout_constraintTop_toBottomOf="@id/tv_shop_name" />
 
@@ -128,6 +132,7 @@
                 android:text="Phone Number:"
                 android:textSize="16sp"
                 android:layout_marginTop="2dp"
+                android:textColor="@color/black"
                 android:textStyle="bold"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/tv_address" />
@@ -136,53 +141,67 @@
                 android:id="@+id/tv_phone_number"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Phone Number"
+                android:text=" Phone Number"
                 android:textSize="18sp"
+                android:textColor="@color/black"
                 app:layout_constraintStart_toEndOf="@id/tv_phone_number_label"
-                app:layout_constraintTop_toBottomOf="@id/tv_address" />
+                app:layout_constraintTop_toBottomOf="@id/tv_address"/>
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-    <!-- Search Bar -->
-    <EditText
-        android:id="@+id/et_search"
-        android:layout_width="0dp"
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Search products"
-        android:drawableStart="@drawable/search"
-        android:inputType="text"
-        android:drawablePadding="8dp"
-        android:layout_marginStart="5dp"
-        android:layout_marginEnd="5dp"
-        android:padding="8dp"
-        android:background="@drawable/search_bar_background"
-        android:textSize="14sp"
-        app:layout_constraintTop_toBottomOf="@id/profile_and_message_container"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginTop="30dp"/>
+        android:layout_marginTop="5dp"
+        app:layout_constraintTop_toBottomOf="@id/profile_and_message_container">
 
-    <!-- Category Spinner -->
-    <Spinner
-        android:id="@+id/spinner_categories"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/et_search"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:padding="8dp"
-        android:layout_marginTop="10dp"/>
+        <!-- Horizontal LinearLayout for EditText and Spinner -->
+        <LinearLayout
+            android:id="@+id/upper"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:padding="10dp"
+            android:gravity="center_vertical"
+            android:layout_marginTop="10dp"
+            app:layout_constraintTop_toBottomOf="@id/profile_and_message_container"
+            tools:ignore="NotSibling">
 
-    <!-- RecyclerView for displaying products -->
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rv_products"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:padding="10dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/spinner_categories"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintVertical_bias="0.0"
-        app:layout_constraintHorizontal_bias="0.0" />
+            <!-- EditText (Search Bar) -->
+            <EditText
+                android:id="@+id/et_search"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:hint="Search products"
+                android:drawableStart="@drawable/search"
+                android:inputType="text"
+                android:drawablePadding="8dp"
+                android:layout_marginEnd="10dp"
+                android:padding="8dp"
+                android:background="@drawable/search_bar_background"
+                android:textSize="14sp"
+                android:layout_weight="1"/>
+
+            <Spinner
+                android:id="@+id/spinner_categories"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@drawable/search_bar_background"
+                android:padding="8dp"/>
+        </LinearLayout>
+
+        <!-- RecyclerView for displaying products -->
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rv_products"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:padding="10dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/upper"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintVertical_bias="0.0"
+            app:layout_constraintHorizontal_bias="0.0" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
