--- a/app/src/main/res/layout/fragment_home_buyer.xml
+++ b/app/src/main/res/layout/fragment_home_buyer.xml
@@ -14,6 +14,7 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:padding="16dp"
+        android:layout_marginTop="10dp"
         android:background="@android:color/white"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
