--- a/app/src/main/res/layout/fragment_home_seller.xml
+++ b/app/src/main/res/layout/fragment_home_seller.xml
@@ -8,24 +8,26 @@
     android:background="@android:color/white"
     tools:context=".HomeFragmentSeller">
 
+    <!-- Top Bar with Search Bar and Icons -->
     <LinearLayout
         android:id="@+id/top_bar"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:padding="16dp"
+        android:layout_marginTop="10dp"
         android:background="@android:color/white"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent">
 
+        <!-- Search Bar -->
         <androidx.appcompat.widget.AppCompatEditText
             android:id="@+id/search_bar"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:hint="Search Product"
-            android:layout_marginTop="5dp"
             android:drawableStart="@drawable/search"
             android:drawablePadding="8dp"
             android:padding="8dp"
@@ -33,6 +35,7 @@
             android:inputType="text"
             android:imeOptions="actionSearch"/>
 
+        <!-- Cart Icon -->
         <ImageView
             android:id="@+id/icon_cart"
             android:layout_width="30dp"
@@ -42,7 +45,7 @@
             android:src="@drawable/addtocart"
             android:contentDescription="Add to Cart"/>
 
-        <!-- Message Icon with notification badge -->
+        <!-- Message Icon with Notification Badge -->
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content">
@@ -79,11 +82,55 @@
 
     </LinearLayout>
 
+    <!-- Marketplace and Shops Section -->
+    <LinearLayout
+        android:id="@+id/marketplace_shops_section"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:paddingStart="16dp"
+        android:paddingEnd="16dp"
+        android:paddingTop="3dp"
+        android:paddingBottom="3dp"
+        android:gravity="center_vertical"
+        app:layout_constraintTop_toBottomOf="@id/top_bar"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent">
+
+        <!-- Marketplace TextView -->
+        <TextView
+            android:id="@+id/btn_marketplace"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="Marketplace"
+            android:textColor="@android:color/black"
+            android:padding="10dp"
+            android:textSize="16sp"
+            android:clickable="true"
+            android:focusable="true" />
+
+        <!-- Shops TextView -->
+        <TextView
+            android:id="@+id/text_shops"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="Shops"
+            android:textColor="@android:color/black"
+            android:padding="10dp"
+            android:textSize="16sp"
+            android:clickable="true"
+            android:focusable="true" />
+
+    </LinearLayout>
+
+    <!-- Scrollable Content Section -->
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_marginTop="8dp"
-        app:layout_constraintTop_toBottomOf="@id/top_bar"
+        app:layout_constraintTop_toBottomOf="@id/marketplace_shops_section"
         app:layout_constraintBottom_toBottomOf="parent">
 
         <LinearLayout
@@ -91,7 +138,7 @@
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
-            <!-- Central Components -->
+            <!-- Central Components Section -->
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -121,7 +168,7 @@
                 android:layout_height="wrap_content"
                 android:background="@drawable/viewpager_background"/>
 
-            <!-- Body -->
+            <!-- Body Section -->
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -151,7 +198,7 @@
                 android:layout_height="wrap_content"
                 android:background="@drawable/viewpager_background"/>
 
-            <!-- Connectors -->
+            <!-- Connectors Section -->
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -181,7 +228,7 @@
                 android:layout_height="wrap_content"
                 android:background="@drawable/viewpager_background"/>
 
-            <!-- Peripherals -->
+            <!-- Peripherals Section -->
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -213,14 +260,5 @@
 
         </LinearLayout>
     </ScrollView>
-
-    <FrameLayout
-        android:id="@+id/fragment_container"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        app:layout_constraintTop_toBottomOf="@id/top_bar"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
