--- a/app/src/main/res/layout/item_sales_product.xml
+++ b/app/src/main/res/layout/item_sales_product.xml
@@ -3,11 +3,11 @@
     android:orientation="horizontal"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:padding="8dp"
+    android:padding="15dp"
     android:layout_marginStart="5dp"
     android:layout_marginEnd="5dp"
     android:layout_marginTop="20dp"
-    android:background="@drawable/border"
+    android:background="@drawable/shopbg2"
     android:gravity="center_vertical">
 
     <!-- Product Image -->
@@ -24,6 +24,7 @@
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="0dp"
+        android:layout_marginStart="10dp"
         android:layout_height="wrap_content"
         android:layout_weight="1">
 
@@ -34,6 +35,7 @@
             android:layout_height="wrap_content"
             android:text="Product Name"
             android:textSize="16sp"
+            android:textStyle="bold"
             android:textColor="#000000" />
 
         <!-- Product Price -->
@@ -42,6 +44,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="₱0.00"
+            android:textStyle="bold"
             android:textSize="14sp"
             android:textColor="#000000" />
 
@@ -52,6 +55,7 @@
             android:layout_height="wrap_content"
             android:text="Quantity: 0"
             android:textSize="12sp"
+            android:textStyle="bold"
             android:textColor="#000000" />
 
         <!-- Product Year Model -->
@@ -61,6 +65,7 @@
             android:layout_height="wrap_content"
             android:text="Year Model: 2020"
             android:textSize="12sp"
+            android:textStyle="bold"
             android:textColor="#000000" />
 
     </LinearLayout>
