--- a/app/src/main/res/layout/activity_buyer_register.xml
+++ b/app/src/main/res/layout/activity_buyer_register.xml
@@ -40,76 +40,65 @@
             android:textStyle="bold"
             app:layout_constraintTop_toBottomOf="@id/tv1"
             app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginTop="20dp"
-             />
+            android:layout_marginTop="20dp" />
 
-        <androidx.cardview.widget.CardView
-            android:id="@+id/cv4"
+        <!-- TextInputLayout for First Name -->
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/input_full_name"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            app:cardCornerRadius="20dp"
             app:layout_constraintTop_toBottomOf="@id/fn"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginTop="10dp">
-
-            <EditText
+            <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/etfn"
                 android:layout_width="match_parent"
-                android:layout_height="60dp"
-                android:fontFamily="serif-monospace"
-                android:paddingStart="20dp"
-                android:paddingEnd="20dp"
+                android:layout_height="wrap_content"
                 android:hint="First Name"
+                android:imeOptions="actionNext"
                 android:textColorHint="#FF000000"
-                android:textStyle="bold"
-                android:textAlignment="center"
-                android:textColor="#FF000000"
-                android:background="@color/white2"
-                android:inputType="textPersonName"
-                android:textSize="18sp" />
-        </androidx.cardview.widget.CardView>
+                android:textColor="@color/primary_text"
+                android:backgroundTint="@color/primary_light"
+                android:padding="16dp"
+                android:textSize="18sp"
+                android:inputType="textPersonName" />
+        </com.google.android.material.textfield.TextInputLayout>
 
         <TextView
             android:id="@+id/ln"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Last Name"
-            android:textColor="@android:color/black"
             android:textSize="18sp"
+            android:textColor="@android:color/black"
             android:textStyle="bold"
-            app:layout_constraintTop_toBottomOf="@id/cv4"
+            app:layout_constraintTop_toBottomOf="@id/input_full_name"
             app:layout_constraintStart_toStartOf="parent"
             android:layout_marginTop="10dp" />
 
-        <androidx.cardview.widget.CardView
-            android:id="@+id/cv5"
+        <!-- TextInputLayout for Last Name -->
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/input_last_name"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            app:cardCornerRadius="20dp"
             app:layout_constraintTop_toBottomOf="@id/ln"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginTop="10dp">
-
-            <EditText
+            <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/etln"
                 android:layout_width="match_parent"
-                android:layout_height="60dp"
-                android:fontFamily="serif-monospace"
-                android:paddingStart="20dp"
-                android:paddingEnd="20dp"
+                android:layout_height="wrap_content"
                 android:hint="Last Name"
                 android:textColorHint="#FF000000"
-                android:textStyle="bold"
-                android:textAlignment="center"
-                android:textColor="#FF000000"
-                android:background="@color/white2"
-                android:inputType="textPersonName"
-                android:textSize="18sp" />
-        </androidx.cardview.widget.CardView>
-
-
+                android:imeOptions="actionNext"
+                android:textColor="@color/primary_text"
+                android:backgroundTint="@color/primary_light"
+                android:padding="16dp"
+                android:textSize="18sp"
+                android:inputType="textPersonName" />
+        </com.google.android.material.textfield.TextInputLayout>
 
         <TextView
             android:id="@+id/mobileno"
@@ -119,36 +108,32 @@
             android:textSize="18sp"
             android:textColor="@android:color/black"
             android:textStyle="bold"
-            app:layout_constraintTop_toBottomOf="@id/cv5"
+            app:layout_constraintTop_toBottomOf="@id/input_last_name"
             app:layout_constraintStart_toStartOf="parent"
             android:layout_marginTop="10dp" />
 
-        <androidx.cardview.widget.CardView
-            android:id="@+id/cv7"
+        <!-- TextInputLayout for Mobile Number -->
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/input_mobile_number"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            app:cardCornerRadius="20dp"
             app:layout_constraintTop_toBottomOf="@id/mobileno"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginTop="10dp">
-
-            <EditText
+            <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/etemobileno"
                 android:layout_width="match_parent"
-                android:layout_height="60dp"
-                android:fontFamily="serif-monospace"
-                android:paddingStart="20dp"
-                android:paddingEnd="20dp"
+                android:layout_height="wrap_content"
                 android:hint="63 xxxx xxx xxx"
                 android:textColorHint="#FF000000"
-                android:textStyle="bold"
-                android:textAlignment="center"
-                android:textColor="#FF000000"
-                android:background="@color/white2"
-                android:inputType="phone"
-                android:textSize="18sp" />
-        </androidx.cardview.widget.CardView>
+                android:textColor="@color/primary_text"
+                android:backgroundTint="@color/primary_light"
+                android:imeOptions="actionNext"
+                android:padding="16dp"
+                android:textSize="18sp"
+                android:inputType="phone" />
+        </com.google.android.material.textfield.TextInputLayout>
 
         <TextView
             android:id="@+id/emailLabel"
@@ -158,38 +143,32 @@
             android:textSize="18sp"
             android:textColor="@android:color/black"
             android:textStyle="bold"
-            app:layout_constraintTop_toBottomOf="@id/cv7"
+            app:layout_constraintTop_toBottomOf="@id/input_mobile_number"
             app:layout_constraintStart_toStartOf="parent"
             android:layout_marginTop="10dp" />
 
-        <androidx.cardview.widget.CardView
-            android:id="@+id/cv1"
+        <!-- TextInputLayout for Email Address -->
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/input_email"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            app:cardCornerRadius="20dp"
             app:layout_constraintTop_toBottomOf="@id/emailLabel"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginTop="10dp">
-
-            <EditText
+            <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/email"
                 android:layout_width="match_parent"
-                android:layout_height="60dp"
-                android:background="@color/white2"
-                android:drawableStart="@drawable/user"
-                android:fontFamily="serif-monospace"
-                android:hint="Username"
-                android:imeOptions="actionNext"
-                android:inputType="textEmailAddress"
-                android:paddingStart="20dp"
-                android:paddingEnd="20dp"
-                android:textAlignment="center"
-                android:textColor="#FF000000"
+                android:layout_height="wrap_content"
+                android:hint="Email Address"
                 android:textColorHint="#FF000000"
+                android:imeOptions="actionNext"
+                android:textColor="@color/primary_text"
+                android:backgroundTint="@color/primary_light"
+                android:padding="16dp"
                 android:textSize="18sp"
-                android:textStyle="bold" />
-        </androidx.cardview.widget.CardView>
+                android:inputType="textEmailAddress" />
+        </com.google.android.material.textfield.TextInputLayout>
 
         <TextView
             android:id="@+id/passwordLabel"
@@ -199,38 +178,32 @@
             android:textSize="18sp"
             android:textColor="@android:color/black"
             android:textStyle="bold"
-            app:layout_constraintTop_toBottomOf="@id/cv1"
+            app:layout_constraintTop_toBottomOf="@id/input_email"
             app:layout_constraintStart_toStartOf="parent"
             android:layout_marginTop="10dp" />
 
-        <androidx.cardview.widget.CardView
-            android:id="@+id/cv2"
+        <!-- TextInputLayout for Password -->
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/input_password"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            app:cardCornerRadius="20dp"
             app:layout_constraintTop_toBottomOf="@id/passwordLabel"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginTop="10dp">
-
-            <EditText
+            <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/password"
                 android:layout_width="match_parent"
-                android:layout_height="60dp"
-                android:background="@color/white2"
-                android:drawableStart="@drawable/lock"
-                android:fontFamily="serif-monospace"
+                android:layout_height="wrap_content"
                 android:hint="Password"
                 android:imeOptions="actionNext"
-                android:inputType="textPassword"
-                android:paddingStart="20dp"
-                android:paddingEnd="20dp"
-                android:textAlignment="center"
-                android:textColor="#FF000000"
                 android:textColorHint="#FF000000"
+                android:textColor="@color/primary_text"
+                android:backgroundTint="@color/primary_light"
+                android:padding="16dp"
                 android:textSize="18sp"
-                android:textStyle="bold" />
-        </androidx.cardview.widget.CardView>
+                android:inputType="textPassword" />
+        </com.google.android.material.textfield.TextInputLayout>
 
         <TextView
             android:id="@+id/cpasswordLabel"
@@ -240,66 +213,32 @@
             android:textSize="18sp"
             android:textColor="@android:color/black"
             android:textStyle="bold"
-            app:layout_constraintTop_toBottomOf="@id/cv2"
+            app:layout_constraintTop_toBottomOf="@id/input_password"
             app:layout_constraintStart_toStartOf="parent"
             android:layout_marginTop="10dp" />
 
-        <androidx.cardview.widget.CardView
-            android:id="@+id/cv3"
+        <!-- TextInputLayout for Confirm Password -->
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/input_confirm_password"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            app:cardCornerRadius="20dp"
             app:layout_constraintTop_toBottomOf="@id/cpasswordLabel"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginTop="10dp">
-
-            <EditText
+            <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/cpassword"
                 android:layout_width="match_parent"
-                android:layout_height="60dp"
-                android:background="@color/white2"
-                android:drawableStart="@drawable/lock"
-                android:fontFamily="serif-monospace"
+                android:layout_height="wrap_content"
                 android:hint="Confirm Password"
-                android:imeOptions="actionDone"
-                android:inputType="textPassword"
-                android:paddingStart="20dp"
-                android:paddingEnd="20dp"
-                android:textAlignment="center"
-                android:textColor="#FF000000"
                 android:textColorHint="#FF000000"
+                android:textColor="@color/primary_text"
+                android:imeOptions="actionNext"
+                android:backgroundTint="@color/primary_light"
+                android:padding="16dp"
                 android:textSize="18sp"
-                android:textStyle="bold" />
-        </androidx.cardview.widget.CardView>
-
-        <TextView
-            android:id="@+id/labeltnc"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="By Signing up, you accept the"
-            android:textSize="15sp"
-            android:textColor="#FF000000"
-            app:layout_constraintTop_toBottomOf="@id/cv3"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginTop="10dp"
-            app:layout_constraintHorizontal_bias="0.5" />
-
-        <TextView
-            android:id="@+id/labeltnc2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Terms of Service"
-            android:textSize="15sp"
-            android:textStyle="bold"
-            android:textColor="#FF018786"
-            app:layout_constraintTop_toBottomOf="@id/labeltnc"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginTop="10dp"
-            app:layout_constraintHorizontal_bias="0.5"
-            />
+                android:inputType="textPassword" />
+        </com.google.android.material.textfield.TextInputLayout>
 
         <Button
             android:id="@+id/btn_signup"
@@ -312,7 +251,7 @@
             android:textColor="@android:color/white"
             android:textSize="18sp"
             android:textStyle="bold"
-            app:layout_constraintTop_toBottomOf="@id/labeltnc2"
+            app:layout_constraintTop_toBottomOf="@id/input_confirm_password"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginTop="20dp" />
