--- a/app/src/main/res/layout/dialog_add_product.xml
+++ b/app/src/main/res/layout/dialog_add_product.xml
@@ -29,6 +29,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="Product Name"
+                android:imeOptions="actionNext"
                 android:textColorHint="@color/grey"
                 android:backgroundTint="@color/primary_light"
                 android:padding="12dp" />
@@ -43,6 +44,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="Brand"
+                android:imeOptions="actionNext"
                 android:textColorHint="@color/grey"
                 android:backgroundTint="@color/primary_light"
                 android:padding="12dp" />
@@ -59,6 +61,7 @@
                 android:hint="Year Model"
                 android:inputType="number"
                 android:textColorHint="@color/grey"
+                android:imeOptions="actionNext"
                 android:backgroundTint="@color/primary_light"
                 android:padding="12dp" />
         </com.google.android.material.textfield.TextInputLayout>
@@ -89,6 +92,7 @@
                 android:hint="Price"
                 android:inputType="numberDecimal"
                 android:textColorHint="@color/grey"
+                android:imeOptions="actionNext"
                 android:backgroundTint="@color/primary_light"
                 android:padding="12dp" />
         </com.google.android.material.textfield.TextInputLayout>
@@ -103,6 +107,7 @@
                 android:layout_height="wrap_content"
                 android:hint="Product Description"
                 android:textColorHint="@color/grey"
+                android:imeOptions="actionNext"
                 android:backgroundTint="@color/primary_light"
                 android:padding="12dp" />
         </com.google.android.material.textfield.TextInputLayout>
@@ -116,6 +121,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="Product Quantity"
+                android:imeOptions="actionNext"
                 android:inputType="number"
                 android:textColorHint="@color/grey"
                 android:backgroundTint="@color/primary_light"
